<resources>
    <string name="app_name">Ice Cream Sundae Maker</string>
    <string name="_0_00">$0.00</string>
    <string name="the_works">The Works!</string>
    <string name="reset">Reset</string>
    <string name="order">Order</string>
    <string name="oreos">Oreos</string>
    <string name="marshmallows">Marshmallows</string>
    <string name="m_amp_m"><![CDATA[M&M]]></string>
    <string name="brownies">Brownies</string>
    <string name="almonds">Almonds</string>
    <string name="peanuts">Peanuts</string>
    <string name="strawberries">Strawberries</string>
    <string name="gummy_bears">Gummy Bears</string>
    <string name="app_logo">app_logo</string>
    <string name="hot_fudge">Hot Fudge</string>
    <string name="_1oz">1oz</string>
    <string name="ice_cream">Ice Cream</string>
    <string-array name="ice_cream_flavors">
        <item>Vanilla</item>
        <item>Chocolate</item>
        <item>Strawberry</item>
    </string-array>
    <string-array name="ice_cream_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>