<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/crossedbgopa"

    app:circularflow_defaultRadius="15dp"
    app:circularflow_radiusInDP="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="114dp"
        android:layout_height="51dp"

        android:background="@drawable/edit_border"
        android:hint="@string/_0_00"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#88F2FF"
        android:textColorHint="#FFCDDE"
        android:textSize="20sp"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/theworks_button"
        android:layout_width="122dp"
        android:layout_height="60dp"

        android:layout_marginStart="29dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/my_button_border"
        android:text="@string/the_works"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/size_spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="215dp"

        android:layout_marginStart="-30dp"
        android:layout_marginTop="-20dp"
        android:contentDescription="@string/app_logo"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/smoothsundaetransp" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="97dp"
        android:layout_height="51dp"
        android:background="@drawable/my_button_border"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="127dp"
        android:layout_height="52dp"
        android:background="@drawable/my_button_border"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <LinearLayout
        android:id="@+id/left_LinearLayout"
        android:layout_width="149dp"
        android:layout_height="192dp"

        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42">

        <CheckBox
            android:id="@+id/almonds_checkBox"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:text="@string/almonds"
            android:textColor="#2F0092"
            android:textColorHighlight="#E91E63"
            android:textColorLink="#E91E63"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <CheckBox
            android:id="@+id/peanuts_checkBox"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/peanuts"
            android:textColor="#2F0092"
            android:textColorHighlight="#E91E63"
            android:textColorLink="#E91E63"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <CheckBox
            android:id="@+id/strawberries_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strawberries"
            android:textColor="#2F0092"
            android:textColorHighlight="#E91E63"
            android:textColorLink="#E91E63"
            android:textSize="12sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/gummybears_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gummy_bears"
            android:textColor="#2F0092"
            android:textColorHighlight="#E91E63"
            android:textColorLink="#E91E63"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"

        android:layout_width="202dp"
        android:layout_height="46dp"
        android:clickable="true"
        android:focusable="true"
        android:indeterminate="false"
        android:max="3"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

    <TextView
        android:id="@+id/seekbar_label_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/hot_fudge"
        android:textColor="#520260"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seekBar"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/size_spinner"
        app:layout_constraintVertical_bias="0.86" />

    <TextView
        android:id="@+id/hotfudge_oz_textView"
        android:layout_width="32dp"
        android:layout_height="16dp"
        android:layout_marginStart="37dp"
        android:hint="@string/_1oz"
        android:textColor="#673AB7"
        android:textColorHint="#673AB7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="138dp"
        android:layout_height="193dp"

        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417">

        <CheckBox
            android:id="@+id/marshmallows_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marshmallows"
            android:textColor="#2F0092"
            android:textColorHighlight="#E91E63"
            android:textColorLink="#E91E63"
            android:textSize="12sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/mm_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_amp_m"
            android:textColor="#2F0092"
            android:textColorHighlight="#E91E63"
            android:textColorLink="#E91E63"
            android:textSize="12sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/brownies_checkBox"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="@string/brownies"
            android:textColor="#2F0092"
            android:textColorHighlight="#E91E63"
            android:textColorLink="#E91E63"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <CheckBox
            android:id="@+id/oreos_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oreos"
            android:textColor="#2F0092"
            android:textColorHighlight="#E91E63"
            android:textColorLink="#E91E63"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <Spinner
        android:id="@+id/size_spinner"
        android:layout_width="102dp"
        android:layout_height="50dp"
        android:background="#FFFEFE"
        android:backgroundTint="#FFFFFF"
        android:entries="@array/ice_cream_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <Spinner
        android:id="@+id/flavors_spinner"
        android:layout_width="103dp"
        android:layout_height="56dp"
        android:background="#FFFFFF"
        android:entries="@array/ice_cream_flavors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

</androidx.constraintlayout.widget.ConstraintLayout>